# aoc

./: .gitignore  README.md  pyproject.toml
day1/: readme.md  solution1.py  solution2.py
day10/: readme.md  solution1.py
day11/: readme.md  solution1.py  solution2.py
day12/: readme.md  solution1.py  solution2.py
day13/: readme.md  solution1.py  solution2.py
day14/: readme.md  solution1.py
day15/: readme.md  solution1.py  solution2.py
day16/: readme.md  solution1.py  solution2.py
day17/: readme.md  solution1.py  solution2.py
day2/: readme.md  solution1.py  solution2.py
day3/: readme.md  solution1.py  solution2.py
day4/: readme.md  solution1.py  solution2.py
day5/: readme.md  solution1.py  solution2.py
day6/: readme.md  solution1.py  solution2.py
day7/: readme.md  solution1.py  solution2.py
day8/: readme.md  solution1.py  solution2.py
day9/: readme.md  solution1.py  solution2.py
